--- a/.github/workflows/weibo_summary.yml
+++ b/.github/workflows/weibo_summary.yml
@@ -27,5 +27,7 @@ jobs:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           EMAIL_RECEIVER: ${{ secrets.EMAIL_RECEIVER }}
+          DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
+
         run: |
           python weibo_summary_mailer.py
