--- a/.github/workflows/weibo_summary.yml
+++ b/.github/workflows/weibo_summary.yml
@@ -12,6 +12,7 @@ jobs:
       DEEPSEEK_API_KEY: ${{ secrets.DEEPSEEK_API_KEY }}
       EMAIL_USER: ${{ secrets.EMAIL_USER }}
       EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
+      EMAIL_RECEIVER: ￥{{secrets.EMAIL_RECEIVER}}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
